Canary-deployment/app-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: canary
  template:
    metadata:
      labels:
        app: app
        version: canary
    spec:
      containers:
      - name: app-container
        image: asia-south1-docker.pkg.dev/s-0-009988/docker-images/stable:${IMAGE_TAG}
        ports:
        - containerPort: 80
