Canary-deployment/app-stable.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-stable
spec:
  replicas: 4
  selector:
    matchLabels:
      app: app
      version: stable
  template:
    metadata:
      labels:
        app: app
        version: stable
    spec:
      containers:
      - name: app-container
        image: asia-south1-docker.pkg.dev/s-0-009988/docker-images/stable:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 80
