Canary-deployment/app-service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-canary
spec:
  selector:
    app: app
    version: canary
  ports:
  - port: 80
    targetPort: 8080
