Canary-deployment/app-service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-stable
spec:
  type: ClusterIP 
  selector:
    app: app
    version: stable
  ports:
  - port: 80
    targetPort: 80
