Canary-deployment/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
spec:
  hosts:
  - "app-service.default.svc.cluster.local"
  http:
  - route:
    - destination:
        host: app-service
        subset: stable
      weight: 80
    - destination:
        host: app-service
        subset: canary
      weight: 20
